change ssh port

--- a/dotnetcoressh/supervisord.conf
+++ b/dotnetcoressh/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:api]
-command=/usr/bin/dotnet /app/dotnetcore-ssh.dll
+command=/usr/bin/dotnet /app/dotnetcoressh.dll
 
 [program:ssh]
 command=/usr/sbin/sshd -D
